refactor(菜单初始化): 优化SCM菜单初始化日志输出和删除逻辑
重构菜单初始化流程，添加更详细的日志输出以方便调试
使用Arrays.asList和Collectors.toList改进集合操作
增强旧菜单删除逻辑，明确列出要删除的菜单名称